# NLP-Spam-Detection

./: .gitignore  README.md  instructor_public_key.pem  linear.sav  main.py  pyproject.toml  test_proof.json  test_results.json
data/: sms_spam.csv
mlruns/0/: meta.yaml
mlruns/206778530106229555/: meta.yaml
mlruns/206778530106229555/bbb51f94cc034fc7a7c0fb962576e0b6/: meta.yaml
mlruns/623571700207900113/: meta.yaml
mlruns/623571700207900113/0b7a40bd4f014e3f87463eb85f1f4e45/: meta.yaml
mlruns/623571700207900113/0b7f3f72c8ed4c52a06c69a058ee3e00/: meta.yaml
mlruns/623571700207900113/158b84dfdc204035a62ec08ae65bd568/: meta.yaml
mlruns/623571700207900113/15ef1e5eab8d4282a1d63c724ac5c3ef/: meta.yaml
mlruns/623571700207900113/198ebfc486764f57ba46e22a74369d36/: meta.yaml
mlruns/623571700207900113/1f873a62618c4f889b0fdeb0f17735f2/: meta.yaml
mlruns/623571700207900113/20bd8aa3dd4e47e3ad302139323bc11a/: meta.yaml
mlruns/623571700207900113/23bc0f0d675540bda9fc4bd785e617ad/: meta.yaml
mlruns/880947898731333196/: meta.yaml
notebooks/: air_quality.ipynb  air_quality_todo.ipynb  spam_notebook.ipynb
scripts/: crypto_utils.py  run_automatic_pipeline.py  run_grid_search_pipeline.py  run_pipeline.py  run_tests.py
src/: __init__.py
src/pipeline/: __init__.py  data_processor.py  evaluator.py  feature_engineer.py  model_trainer.py
src/utils/: __init__.py  config.py  evaluation_utils.py  logger.py  parse_args.py  utils.py
tests/: __init__.py  conftest.py  test_data_processor.py  test_evaluator.py  test_feature_engineer.py  test_model_trainer.py
(+581 files in other folders)
